--- a/concept/BFCHybrid.tex
+++ b/concept/BFCHybrid.tex
@@ -38,7 +38,7 @@
 }
 
 \title[Hybrid DMFC/ASSLB]{Methanol Fuel Cell Enabled Hybrid Power System}
-\author[Ban, Ciobanu, Christensen, Kappes, Hurst]{%
+\author[Ban, Christensen, Ciobanu, Kappes, Hurst]{%
 	Process Global, Inc. (Sunnyvale, CA); Dr. Branden Kappes \\ %
 	Technical Category: 7.L Technologies for portable power applications \\ %
 	Estimated Total Project Cost: \$3.6M \\ %
@@ -142,18 +142,25 @@ H.~Tateishi, et al., %K.~Hatakeyama, C.~Ogata, K.~Gezuhara, J.~Kuroda, a.~Funats
 \end{minipage}
 \end{center}
 
-\vspace{1em}\begin{center}\textbf{Team Organization and Capabilities}\end{center}\noindent\textbf{Project Prime}: Process Global, Inc. (PGi) has established unique partnerships of highly experienced industry leaders representing a multidisciplinary range of disruptive technologies. The core team has over 100+ man-years of experience across a wide range of fields, including manufacturing, process development, equipment engineering, and renewable energy.
+\vspace{1em}
+\begin{center}\textbf{Team Organization and Capabilities}\end{center}
+
+\noindent\textbf{Project Prime}: Process Global, Inc. (PGi) has established unique partnerships of highly experienced industry leaders representing a multidisciplinary range of disruptive technologies. The core team has over 100+ man-years of experience across a wide range of fields, including manufacturing, process development, equipment engineering, and renewable energy.
 
 \textit{Principle Investigator}: Dr. Branden Kappes is the VP of Technology at PGi.  He will be responsible for systematically studying electrochemical properties of the solid-state Li-ion battery and characterization and testing of the proposed hybrid power system.
-\noindent\textbf{Project Partner}: The National Renewable Energy Laboratory (NREL) has a strong research effort in fuel cell catalyst development, which includes metal alloy WCR, ALD, sputtering; physical and chemical modification of fuel cell catalyst support; synthesis of advanced carbon materials; electrochemical testing and cycling; physical characterization of materials; fuel cell assembly and testing. NREL is also equipped with an electrochemical laboratory uniquely capable of synthesizing and testing lithium ion systems from materials to coin cells.
+
+\noindent\textbf{Project Partner}: The National Renewable Energy Laboratory (NREL) has a strong research effort in fuel cell catalyst development, which includes metal alloy WCR, ALD, sputtering; physical and chemical modification of fuel cell catalyst support; synthesis of advanced carbon materials; electrochemical testing and cycling; physical characterization of materials; fuel cell assembly and testing. NREL is also equipped with an electrochemical laboratory uniquely capable of synthesizing and testing lithium ion systems from materials to coin cells.
 
 \textit{Key Member}: Dr. Chunmei Ban is staff scientist in the Center of Chemistry and Materials Science at NREL. Dr. Ban's expertise in the study of nanostructured materials has been instrumental in successfully implementing DOE-funded projects including Nanostructured Metal Oxide and high-energy electrode materials for lithium-ion batteries.
 
 \textit{Key Member}: Dr. Steven Christensen is an expert in catalyst characterization and will support process feedback for the optimization of the DMFC components.
 
 \textit{Key Member}: Dr. Katherine Hurst is an expert in material synthesis and will perform catalyst synthesis and GO formation and modification.
-\noindent\textbf{Project Partner}: Colorado School of Mines maintains a strong institutional focus on energy research, including high performance computing resources dedicated to solving energy-related challenges using modeling and simulation, and extensive research in fuel cells through the Colorado Fuel Cell Center.
 
-\textit{Key Member}: Prof. Cristian Ciobanu is an expert in computational materials science focusing on structure, properties, and phenomena in nanomaterials, and will provide molecular dynamics simulations and process modeling expertise to the project.All members of the team have collaborated on projects relevant to the proposed effort. Drs. Ban and Kappes have collaborated on organic flow batteries through the ARPA-E sponsored RANGE program and for three years on nanostructured materials for next-generation Li-ion batteries. Drs. Ciobanu and Kappes have collaborated extensively on simulation and modeling across a range of materials challenges, including research into lithium ion batteries.
+\noindent\textbf{Project Partner}: Colorado School of Mines maintains a strong institutional focus on energy research, including high performance computing resources dedicated to solving energy-related challenges using modeling and simulation, and extensive research in fuel cells through the Colorado Fuel Cell Center.
+
+\textit{Key Member}: Prof. Cristian Ciobanu is an expert in computational materials science focusing on structure, properties, and phenomena in nanomaterials, and will provide molecular dynamics simulations and process modeling expertise to the project.
+
+All members of the team have collaborated on projects relevant to the proposed effort. Drs. Ban and Kappes have collaborated on organic flow batteries through the ARPA-E sponsored RANGE program and for three years on nanostructured materials for next-generation Li-ion batteries. Drs. Ciobanu and Kappes have collaborated extensively on simulation and modeling across a range of materials challenges, including research into lithium ion batteries.
 
 \end{document}  
