2015-02-27 09:20 Final read-through
Final read-through, checking spelling, grammar, punctuation, etc.

--- a/concept/BFCHybrid.tex
+++ b/concept/BFCHybrid.tex
@@ -90,7 +90,7 @@ Platinum group metal (PGM) catalyst activity is affected by both the nature of t
 
 The catalytic materials systems to be addressed are Pt and Pt-alloy NPs, with or without core-shell morphologies.  These well-defined catalytic systems are ideal for linking experiments and modeling, providing controlled systems for building selective and complex functionalities.  The proposed effort will increase catalyst stability by lowering the solubility of Ru in acidic media. Our team has extensive experience in Pt--Ru deposition including wet chemical reduction (WCR), ALD, and sputtering.  In addition to technical challenges, catalyst cost poses a significant economic challenge.  Both anode and cathode require PGM catalysts.  Loading levels of 2.5~$\mathrm{mg/cm^2}$ account for a price of \$1366/kW (Pt: \$1162/oz).  To reduce catalytic loading, and bring the price below competing technologies, we will also investigate the targeted growth of Pt to GO surface defects using ALD, localizing catalyst deposition to proton transport centers.
 
-Solid-state electrolytes appreciably reduce the complexity of each lithium ion cell, reducing both weight and volume.  With a smaller cell, this volume and weight can be recaptured into increased fuel storage, multiplying the impact of any improvement in battery performance.  An all solid-state battery using solid electrolytes is expected to have a higher energy density, reliability, and reduced safety concerns compared to a lithium ion battery using organic liquid electrolytes. All-solid-state batteries can be divided into two types, thin-film-type and bulk-type. For large-scale applications, bulk-type ASSLBs with high loadings of active material and solid electrolyte powders are well-suited because of their high energy density. However, ASSLBs have crucial challenges for practical applications, such as poor rate performance and poor contact be-tween the active material and the electrolyte.  Sulfide type electrolytes were developed to improve conductivity over earlier solid electrolytes, e.g. LiPON. $\mathrm{Li_2S}$--$\mathrm{P_2S_5}$ and $\mathrm{Li_2S}$--$\mathrm{P_2S_5}$--$\mathrm{GeS_2}$ systems offer ion conductivity from $10^{-3}$ to $10^{-2}$~S/cm at room temperature, similar to liquid electrolytes; and have a high, 5~V decomposition potential.  With these electrolytes, the maximum resistance is observed at the cathode/sulfide electrolyte interfaces and presents the most pressing technical challenge: improved cathode--electrolyte contact.
+Solid-state electrolytes appreciably reduce the complexity of each lithium ion cell, reducing both weight and volume.  With a smaller cell, this volume and weight can be recaptured into increased fuel storage, multiplying the impact of any improvement in battery performance.  An all solid-state battery using solid electrolytes is expected to have a higher energy density, reliability, and reduced safety concerns compared to a lithium ion battery using organic liquid electrolytes. All-solid-state batteries can be divided into two types, thin-film-type and bulk-type. For large-scale applications, bulk-type ASSLBs with high loadings of active material and solid electrolyte powders are well-suited because of their high energy density. However, ASSLBs have crucial challenges for practical applications, such as poor rate performance and poor contact between the active material and the electrolyte.  Sulfide type electrolytes were developed to improve conductivity over earlier solid electrolytes, e.g. LiPON. $\mathrm{Li_2S}$--$\mathrm{P_2S_5}$ and $\mathrm{Li_2S}$--$\mathrm{P_2S_5}$--$\mathrm{GeS_2}$ systems offer ion conductivity from $10^{-3}$ to $10^{-2}$~S/cm at room temperature, similar to liquid electrolytes; and have a high, 5~V decomposition potential.  With these electrolytes, the maximum resistance is observed at the cathode/sulfide electrolyte interfaces and presents the most pressing technical challenge: improved cathode--electrolyte contact.
 
 {\it Year 1} will focus on the development of individual components with significant progress toward the stated performance metrics.  This will include (1) synthesis and characterization of candidate graphene oxide and chemically modified GO membranes. (2) Synthesis, modeling, and analysis of the stability, activity, and performance of the anode catalyst layer under conditions near and around those expected during fuel cell operation.  (3) We will use SEM, TEM, and cyclic voltammetry to understand the cathode/electrolyte interface, which has been identified as an issue of the greatest importance for the improvement in ASSLBs.  (4) Finally, system level modeling efforts will be put in place to pre-optimize operating conditions based on the evolving properties of the catalyst layer, membrane and battery properties.
 
