--- a/concept/BFCHybrid.tex
+++ b/concept/BFCHybrid.tex
@@ -52,7 +52,7 @@
 \thispagestyle{first style}
 \paragraph{\bf Summary} Next generation portable electronics will increasingly require always-on technologies -- such as powered sensors, continuous data acquisition, on-chip data analytics and communication -- to improve functionality and extend into applications currently prohibited by relatively high energy demands.  Lithium ion batteries are sufficient to power existing portable systems, and operate at or near 100\% Coulombic efficiency over  a wide range of currents and state of charge. But energy densities below 100 Wh/L place prohibitive limits on technologies with always-on energy requirements.  In contrast, direct methanol fuel cells (DMFCs) have theoretical energy densities in excess of 3000 Wh/L, but suffer from chemical-, mass transport-, and ohmic-polarization losses that impede their ability to promptly respond to changes in power demand, resulting in a narrow optimal operating range.
 
-A hybrid battery-fuel cell power system couples the energy density and generation of a DMFC with the power response and wide operational efficiency of an all solid-state lithium ion battery (ASSLB). Figure~\ref{fig:efficiency} shows the potential impact of a hybrid DMFC/ASSLB power system.  A survey of coal, petroleum, natural gas, and nuclear fuels powering steam, gas turbine, ICE, and combined cycle generation reveal a 73\% fuel-to-use loss.  Presently, DMFCs operate at an efficiency of $\sim$19\%, but unconstrained by Carnot efficiency, these could theoretically achieve a 79\% efficiency, including losses from production and distribution. As a result, portable devices powered by our hybrid DMFC/ASSLB would require considerably less fuel than those powered off the electric grid.
+A hybrid battery-fuel cell power system couples the energy density and generation of a DMFC with the power response and wide operational efficiency of an all solid-state lithium ion battery (ASSLB). Figure~\ref{fig:efficiency} shows the potential impact of a hybrid DMFC/ASSLB power system.  A survey of coal, petroleum, natural gas, and nuclear fuels powering steam, gas turbine, ICE, and combined cycle generation reveal a 73\% fuel-to-use loss.  Presently, DMFCs operate at an efficiency of $\sim$19\%, but unconstrained by Carnot efficiency, these could theoretically achieve a 79\% efficiency, including losses from production and distribution. As a result, portable devices powered by our hybrid DMFC/ASSLB would require considerably less fuel than those powered by the electric grid.
 
 \begin{wrapfigure}{l}{0.5\textwidth}
 	\begin{center}
